[tool.poetry]
name = "mosaic"
version = "0.1.0"
description = ""
authors = ["Alexis Svinartchouk <zvin@free.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.1"
PyOpenGL = "^3.1.5"
python-graph-core = "^1.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
