[tool.poetry]
name = "mosaic"
version = "0.1.0"
description = ""
authors = ["Alexis Svinartchouk <zvin@free.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^10.0.1"
PyOpenGL = "==3.1.5"
python-graph-core = "^1.8.2"
platformdirs = "^3.11.0"
pysdl2 = "^0.9.16"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
